--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -83,6 +83,10 @@ p, a {
     font-size: 3rem;
 }
 
+html{
+    font-size: 62.5%;
+}
+
 /* header section */
 header {
     width: 100%;
@@ -91,6 +95,52 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+/* Bloomtech Bar And Grill Header*/
+header div{
+    background-color: rgb(0, 4, 17, 0.6)
+}
+
+h1 a{
+    color: white;
+    font-size: 4rem;
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+}
+
+/* menu, reservation, etc nav and logos */
+nav{
+    height: 10vw;
+    text-align: center;
+}
+
+.links{
+    background-color: rgb(0, 4, 17, .0);
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2%;
+}
+
+.links a{
+    color: white;
+    font-size: 2rem;
+}
+
+nav .logos{
+    display: flex;
+    background-color: rgb(0, 4, 17, .0);
+    font-size: 3rem;
+    color: white;
+    justify-content:center;
+    margin-right: 1.8%;
+}
+
+.logos i{
+    margin:2% 2.5%;
 }
 
 /* spacers */
@@ -105,7 +155,17 @@ header {
     background-color: rgb(0, 4, 17);
 }
 
+.spacer-blue{
+    width: 100%;
+    height: 20vh;
+    background-color: rgb(95, 92, 241);
+}
+
 /* gallery section */
+h2{
+    color: white;
+}
+
 .gallery {
     width: 100%;
     height: 100vh;
@@ -139,6 +199,7 @@ header {
 
 .about-container .text {
     width: 50%;
+    color: white;
 }
 
 /* contact us section */
@@ -163,10 +224,12 @@ header {
 
 .contact h3 {
     padding-top: 2.5vh;
+    color: white;
 }
 
 .contact p {
     padding: .5vh 0;
+    color: white;
 }
 
 .info {
@@ -188,59 +251,122 @@ header {
     width: 25%;
 }
 
+.contacts div a{
+    color: white
+}
 /* footer section */
 footer {
     width: 100%;
-    height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    background-color: black;
+}
+
+.l{
+    display: flex;
+    align-items: center;
+}
+
+.mailing{
+   text-align: center;
+}
+.mailing label{
+    color: white;
+    font-size: 2rem;
+}
+
+footer p{
+    font-size: 1rem;
+    color: white;
+    margin-top: 10%;
+}
+
+.footernav{
+    width: 60%;
+    height: 10vh;
+}
+
+.footerlinks{
+    height: 10vh;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footerlinks a{
+    margin-top: 1%;
+    font-size: 2rem;
+    color: white;
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
-    
+
+    nav{
+        height: 45vw;
+    }
+
+    h1 a{
+        width: 75%;
+        font-size: 4.5rem;
+        text-align: center;
+    }
+
+    .links{
+        flex-direction: column;
+    }
+
+    nav .links a{
+        font-size: 2.5rem;
+    }
+
+
 
     /* gallery section */
     .gallery {
         height: auto;
     }
-    
+
     /* about us section */
 
     .about {
         height: 200vh;
     }
-    
+
     .about h2 {
         width: 100%;
         padding-top: 5vh;
     }
-    
+
     .about-container .text {
         width: 85%;
     }
-    
+
     /* contact us section */
+
+    .contact h2{
+        font-size: 5rem;
+    }
+
     .contact h3 {
         padding-top: 2.5vh;
     }
-    
+
     .info {
         flex-wrap: wrap;
     }
-    
+
     .address {
         width: 100%;
         padding-bottom: 2.5vh;
     }
-    
+
     .hours {
         width: 100%;
     }
-    
+
     .contacts {
-        width: 100%;
+        width: 70%;
         padding-bottom: 2.5vh;
     }
 
@@ -250,4 +376,28 @@ footer {
         padding-top: 2.5vh;
         font-size: 2rem;
     }
+
+    .l{
+        display: flex;
+        flex-direction: column;
+    }
+    .mailing{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 70%;
+    }
+
+
+
+    .footerlinks{
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer p{
+        margin-left: 18%;
+    }
+
 }
